[metadata]
name = useful-devkit
version = 1.0.0
author = Gerard DeMas-Giménez, Adrià Subirana, Pablo Garcia-Gómez, Eduardo Bernal, Josep R. Casas, Santiago Royo
author_email = gerard.de.mas@upc.edu
url = -
description = Official development kit of the USEFUL dataset.
long_description = file: README.md
long_description_content_type = text/markdown
keywords = Useful, dataset, devkit, perception, autonomous driving, multimodal
license = Creative Commons Attribution Non Commercial 4.0
license_files = LICENSE
platforms = linux, windows
classifiers =
    Intended Audience :: Developers
    Intended Audience :: Education
    Intended Audience :: Science/Research
    License :: OSI Approved :: Creative Commons Attribution Non Commercial License 4.0 (CC BY-NC 4.0)
    Natural Language :: English :: Catalan
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Scientific/Engineering :: Artificial Intelligence

[options]
packages = find_namespace:
package_dir = 
    = src
include_package_data = True
install_requires = 
    numpy
    pyquaternion>=0.9.5
    tqdm
    pypcd4
python_requires = 
    >=3.8, <3.13
zip_safe = False

[options.packages.find]
where = src
exclude =
    tutorials

[options.package_data]
truckscenes.eval.* =
    *.json

[options.extras_require]
all =
    matplotlib
    jupyter
    open3d
    opencv-python
    folium

visu =
    matplotlib
    open3d
    opencv-python
    Pillow>6.2.1

[flake8]
max-line-length = 99
